--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
 	"exports": {
 		".": "./main.js"
 	},
+	"scripts": {
+		"push": "sh ./push.sh"
+	},
 	"devDependencies": {
 		"@signalchain/utils": "^0.9.0",
 		"@types/node": "^17.0.42",
